[project]
name = "pydantic-mypy-plugin-hides-errors"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bodo Graumann", email = "mail@bodograumann.de" }
]
dependencies = [
    "pydantic>=2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy==1.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
plugins = "pydantic.mypy"
