[project]
name = "pydantic-mypy-plugin-hides-errors"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bodo Graumann", email = "mail@bodograumann.de" }
]
dependencies = [
    "pydantic>=2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy==1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
